fixed color picker alignment

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -53,10 +53,16 @@
     }
 
     #pick_container {
+
         margin-top: 50px;
         background-color: #fff;
-        height: 500px;
+        height: 750px;
         position: relative;
+        text-align: center;
+
+    }
+    .interact_container {
+        height: 400px;
     }
 
     .main-container {
@@ -72,8 +78,8 @@
     #fluff_container {
         background-image: url(/static/img/gurl.jpg);
         background-size: cover;
-        background-position: center top;
-        height: 800px;
+        background-position: top left;
+        height: 100vh;
         position: relative;
     }
     .forms {
@@ -94,7 +100,6 @@
 
     .customize {
         position: relative;
-        float: left;
         width: auto;
     }
 
@@ -140,15 +145,14 @@
         padding: 50px 150px;
     }
     .phone {
+        display: inline-block;
         position: relative;
-        width: 400px;
+        width: 300px;
         height: 250px;
-        float: right;
     }
     #phone_mock {
-        position: absolute;
+        vertical-align: inherit;
         height: 500px;
-        top: 0px;
     }
 
     .company_title {
@@ -159,12 +163,26 @@
     }
 
     .box {
-        background: url('/static/img/place.png');
         width: 32%;
         height: 0;
         padding-bottom: 32%;
         float: left;
         position: relative;
+    }
+
+    #main_info .touch {
+        background-image: url('/static/img/social.jpg');
+        background-size: contain;
+    }
+
+    .light {
+        background-image: url('/static/img/headphone.jpg');
+        background-size: contain;
+    }
+
+    #main_info .social {
+        background-image: url('/static/img/touch_box.jpg');
+        background-size: contain;
     }
 
     .touch, .light {
@@ -173,7 +191,7 @@
 
     .headphone {
         position: relative;
-        float: right;
+        display: inline-block;
 
     }
 
@@ -188,9 +206,20 @@
         top: 0;
         bottom: 0;
         width: 100%;
-        background-color: black;
-        opacity: 0.5;
+        color: #fff;
+        background-color: rgba(0,0,0,0.5);
         display: none;
+    }
+    
+    .block_text {
+        text-align: center;
+        font-weight: 300;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 80%;
+        font-size: 14px;
+        transform: translateX(-50%) translateY(-50%);
     }
 
     .box_title {
@@ -740,7 +769,6 @@
         height: 0; 
         border-top: 100px solid gray; 
         border-right: 100px solid transparent;
-
     }
 
     #touch {
@@ -815,7 +843,7 @@
     height: auto;
     position: absolute;
     top: 150px;
-    left: 67px;
+    left: 75px;
 }
 /* colorpicker styles */
 .colorpicker {
@@ -935,6 +963,8 @@
     background-color: #fff;
     height: 600px;
     padding-top: 40px;
+    margin: 0px auto;
+    text-align: center;
 }
 
 .spec_container .title {
@@ -946,24 +976,29 @@
 }
 
 .spec_container .content {
-    width: 50%;
-    float: left;
+    width: 35%;
+/*    float: left;*/
+    text-align: left;
     font-weight: 500;
     color: #00bccc;
     font-size: 16px;
-    padding-left: 40px;
+    display: inline-block;
+
 }
 .spec_container .images {
-    width: 50%;
-    float: right;
+    width: 35%;
+    display: inline-block;
+/*    float: right;*/
 }
 .freq {
-    height: 300px;
+    max-width: 100%;
+    max-height: 100%;
     margin-bottom: 20px;
 }
 
 .dim {
-    height: 200px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .content ul {
